<resources>
    <string name="app_name">Backgammon</string>
    <string name="action_board">Game Board</string>
    <string name="action_settings">Settings</string>
    <string name="action_board_full">Full Board</string>
    <string name="tvBlack">Black Player Name</string>
    <string name="tvWhite">Red Player Name</string>
    <string name="bNewGame">New Game</string>
    <string name="bClear">Clear</string>
    <string name="bDisplayAll">Display All</string>
    <string name="tvHints">Show Move Hints</string>
    <string name="tbMoveHints">tbMoveHints</string>
</resources>
