<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".homePage">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvBlack"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etBlackName"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvWhite"
            android:id="@+id/textView2" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etWhiteName"
            android:inputType="text" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bNewGame"
                android:id="@+id/bNewGame" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bClear"
                android:id="@+id/bClear"
                android:clickable="false" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bDisplayAll"
                android:id="@+id/bDisplayAll" />

        </LinearLayout>

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/glBoard"
            android:focusableInTouchMode="true"
            android:background="@drawable/board"
            android:columnCount="7"
            android:rowCount="7">

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tbBoard">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:measureWithLargestChild="false"
                    android:id="@+id/trBoardTop">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:id="@+id/iv11"
                        android:layout_column="0" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:id="@+id/trBoardBot">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:id="@+id/ivb1"
                        android:layout_column="20" />
                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:id="@+id/ivb2"
                        android:layout_column="40" />
                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:id="@+id/ivb3"
                        android:layout_column="60" />
                </TableRow>
            </TableLayout>

        </GridLayout>

    </LinearLayout>
</RelativeLayout>
